# froide-food

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
froide_food/: admin.py  api_views.py  apps.py  cms_apps.py  forms.py  geocode.py  listeners.py  models.py  tasks.py  updater.py  urls.py  utils.py  views.py
froide_food/management/commands/: switch_venue_provider.py  update_amenities.py
froide_food/migrations/: 0001_initial.py  0002_auto_20180508_1613.py  0003_venuerequestitem.py  0004_auto_20180607_1618.py  0005_auto_20180607_1628.py  0006_auto_20180612_1231.py  0007_auto_20180618_1217.py  0008_auto_20180710_1039.py  0009_venuerequest_last_resolution.py  0010_auto_20181008_1816.py  0011_auto_20190109_1339.py  0012_auto_20190603_1440.py  0013_foodsafetyreport_disgusting.py  0014_foodauthoritystatus.py  0015_venuerequest_amenity.py
froide_food/static/food/: manifest.json
froide_food/templates/froide_food/: _authority_status.html  appeal.html  base.html  by_regions.html  embed_base.html  index.html  osm_help.html  recommend.html  report.html  stats.html  sw.js  sw.js.html
froide_food/templatetags/: food_tags.py
froide_food/venue_providers/: __init__.py  amenity.py  base.py  custom.py  foursquare.py  google.py  requested.py  yelp.py
froide_food/venue_providers/data/: categories.json
frontend/javascript/: food.js  main.js  report.js
frontend/styles/: food.scss  main.scss  yelp_stars.scss
(+31 files in other folders)
